Home improvements and other fixes

--- a/join/home/templates/home/home.html
+++ b/join/home/templates/home/home.html
@@ -26,9 +26,11 @@
   {% include "partials/services.html" %}
   <div class="clearfix"></div>
 
+{% comment %}
   <!--Section 9: Opinions -->
   {% include "partials/opinions.html" %}
   <div class="clearfix"></div>
+{% endcomment %}
 
   <!--Section 10: About Us-->
   {% include "partials/about.html" %}
