--- a/join/home/templates/partials/about.html
+++ b/join/home/templates/partials/about.html
@@ -7,22 +7,15 @@
 <div class="sec-padding section-dark">
   <div class="container">
     <div class="row">
-      <div class=" col-md-12 col-centered text-center"> <img src="images/logo/logo.png" alt=""/>
-        <div class="clearfix"></div>
-        <br/>
-        <br/>
-        <h4 class="text-white">Address</h4>
-        <h6 class="text-light opacity-6">1234 new lorem Rd.<br/>
-          ipsum city, cA 012345<br/>
-          (0123) 123-456-789</h6>
+      <div class=" col-md-12 col-centered text-center"> <img src="{% static "images/logo/logo-join.png" %}" alt=""/>
         <div class="clearfix"></div>
         <ul class="footer-quick-links">
           <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Usuarios</a></li>
+          <li><a href="#">Proyectos</a></li>
+          <li><a href="#">Foro</a></li>
+          <li><a href="#">Noticias</a></li>
+          <li><a href="#">Contáctenos</a></li>
         </ul>
         <div class="divider-line solid light opacity-1"></div>
         <ul class="footer-social-icons round">
@@ -33,8 +26,8 @@
           <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
         </ul>
         <div class="col-md-12">
-          <p class="text-gray">Copyright © 2017 <br/>
-            Design & Developed by Codelayers</p>
+          <p class="text-gray">Copyright © 2018 <br/>
+            Design & Developed by Cecilia Belén Morales, María Luz Boero.</p>
         </div>
       </div>
     </div>
