--- a/join/home/templates/partials/participate.html
+++ b/join/home/templates/partials/participate.html
@@ -1,128 +1,139 @@
 {% load i18n static core_tags %}
 {% get_image_by_slug "foro-background" as forobackground %}
-<section class="section-side-image section-light sec-padding-5 clearfix" style="background: url({{ forobackground.file.url }});">
-  <div class="container">
-    <div class="row slide-controls-4">
-      <div class="col-sm-12">
-        <div class="sec-title-container text-center less-padding-5">
-          <h5 class="font-weight-4 less-mar-1 line-height-4 montserrat opacity-5 text-white">¿Tienes alguna inquietud con respecto a algún tema? Este es tu espacio para compartirlo, no temas a hacer preguntas, de eso se aprende</h5>
-          <h2 class="font-weight-6 less-mar-1 montserrat line-height-5 text-white">GENIALIDADES COMPARTIDAS<br></h2>
-        </div>
+{% if forobackground %}
+  <section class="section-side-image section-light sec-padding-5 clearfix" style="background: url({{ forobackground.file.url }});">
+{% else %}
+  <section class="section-side-image section-light sec-padding-5 clearfix" style="background: #000;">
+{% endif %}
+<div class="container">
+  <div class="row slide-controls-4">
+    <div class="col-sm-12">
+      <div class="sec-title-container text-center less-padding-5">
+        <h5 class="font-weight-3 less-mar-1 line-height-1 montserrat text-white">¿TIENES ALGUNA INQUIETUD CON RESPECTO A ALGÚN TEMA?</h5>
+        <h5 class="font-weight-3 less-mar-1 line-height-1 montserrat text-white">ESTE ES TU ESPACIO PARA COMPARTIRLO, NO TEMAS A HACER PREGUNTAS, DE ESO SE APRENDE</h5>
+        <h2 class="font-weight-6 less-mar-1 montserrat line-height-6 text-white">GENIALIDADES COMPARTIDAS<br></h2>
       </div>
-      <div class="clearfix"></div>
-      <!--end title-->
-      <div class="owl-carousel owl-theme" id="owl-demo3">
-        <div class="item">
-          <div class="col-md-4">
-            <div class="ce-feature-box-33 h-shadow-2 margin-bottom">
-              <div class="text-box text-center">
-                <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
-                <div class="clearfix"></div>
-                <br/>
-                <p>Elit odio erat vel eget consectetuer adipiscing elit Suspendisse et justo Praesent mattis commodo.</p>
-                <div class="clearfix"></div>
-                <br/>
-                <div class="divider-line solid light-2"></div>
-                <br/>
-                <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="http://via.placeholder.com/100x100"/></div>
-                <h6 class="less-mar-1 title montserrat">Matthew</h6>
-                <span>Manager</span> </div>
-            </div>
-          </div>
-          <!--end item-->
-          <div class="col-md-4">
-            <div class="ce-feature-box-33 h-shadow-2 margin-bottom">
-              <div class="text-box text-center">
-                <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
-                <div class="clearfix"></div>
-                <br/>
-                <p>Elit odio erat vel eget consectetuer adipiscing elit Suspendisse et justo Praesent mattis commodo.</p>
-                <div class="clearfix"></div>
-                <br/>
-                <div class="divider-line solid light-2"></div>
-                <br/>
-                <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="http://via.placeholder.com/100x100"/></div>
-                <h6 class="less-mar-1 title montserrat">Jennifer</h6>
-                <span>Designer</span> </div>
-            </div>
-          </div>
-          <!--end item-->
-          <div class="col-md-4">
-            <div class="ce-feature-box-33 h-shadow-2 margin-bottom">
-              <div class="text-box text-center">
-                <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
-                <div class="clearfix"></div>
-                <br/>
-                <p>Elit odio erat vel eget consectetuer adipiscing elit Suspendisse et justo Praesent mattis commodo.</p>
-                <div class="clearfix"></div>
-                <br/>
-                <div class="divider-line solid light-2"></div>
-                <br/>
-                <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="http://via.placeholder.com/100x100"/></div>
-                <h6 class="less-mar-1 title montserrat">Benjamin</h6>
-                <span>Developer</span> </div>
-            </div>
-          </div>
-          <!--end item-->
-        </div>
-        <!--end carousel item-->
-        <div class="item">
-          <div class="col-md-4">
-            <div class="ce-feature-box-33 h-shadow-2 margin-bottom">
-              <div class="text-box text-center">
-                <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
-                <div class="clearfix"></div>
-                <br/>
-                <p>Elit odio erat vel eget consectetuer adipiscing elit Suspendisse et justo Praesent mattis commodo.</p>
-                <div class="clearfix"></div>
-                <br/>
-                <div class="divider-line solid light-2"></div>
-                <br/>
-                <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="http://via.placeholder.com/100x100"/></div>
-                <h6 class="less-mar-1 title montserrat">Matthew</h6>
-                <span>Manager</span> </div>
-            </div>
-          </div>
-          <!--end item-->
-          <div class="col-md-4">
-            <div class="ce-feature-box-33 h-shadow-2 margin-bottom">
-              <div class="text-box text-center">
-                <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
-                <div class="clearfix"></div>
-                <br/>
-                <p>Elit odio erat vel eget consectetuer adipiscing elit Suspendisse et justo Praesent mattis commodo.</p>
-                <div class="clearfix"></div>
-                <br/>
-                <div class="divider-line solid light-2"></div>
-                <br/>
-                <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="http://via.placeholder.com/100x100"/></div>
-                <h6 class="less-mar-1 title montserrat">Jennifer</h6>
-                <span>Designer</span> </div>
-            </div>
-          </div>
-          <!--end item-->
-          <div class="col-md-4">
-            <div class="ce-feature-box-33 h-shadow-2 margin-bottom">
-              <div class="text-box text-center">
-                <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
-                <div class="clearfix"></div>
-                <br/>
-                <p>Elit odio erat vel eget consectetuer adipiscing elit Suspendisse et justo Praesent mattis commodo.</p>
-                <div class="clearfix"></div>
-                <br/>
-                <div class="divider-line solid light-2"></div>
-                <br/>
-                <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="http://via.placeholder.com/100x100"/></div>
-                <h6 class="less-mar-1 title montserrat">Benjamin</h6>
-                <span>Developer</span> </div>
-            </div>
-          </div>
-          <!--end item-->
-        </div>
-        <!--end carousel item-->
-      </div>
-      <!--end carousel main-->
     </div>
+    <div class="clearfix"></div>
+    <!--end title-->
+    <div class="owl-carousel owl-theme" id="owl-demo3">
+      <div class="item">
+        <div class="col-md-4">
+          <div class="ce-feature-box-33 h-shadow-2 margin-bottom">
+            <div class="text-box text-center" style="min-height: 515px">
+              <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
+              <div class="clearfix"></div>
+              <br/>
+              <p>Compañeros, en la facultad me dan esta pregunta y me gustaría conocer sus opiniones: ¿Cómo se puede enfocar el papel del diseño en la educación?</p>
+              <div class="clearfix"></div>
+              <br/>
+              <div class="divider-line solid light-2"></div>
+              <br/>
+              <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="http://via.placeholder.com/100x100"/></div>
+              <h6 class="less-mar-1 title montserrat">Celeste Moyano</h6>
+              <span>Diseñadora de Indumentaria</span>
+              <div><a href="#" class="btn btn-tiny border border-cello uppercase xround-5">Responder</a></div>
+            </div>
+          </div>
+        </div>
+        <!--end item-->
+        <div class="col-md-4">
+          <div class="ce-feature-box-33 h-shadow-2 margin-bottom">
+            <div class="text-box text-center" style="min-height: 515px">
+              <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
+              <div class="clearfix"></div>
+              <br/>
+              <p style="min-height: 90px; text-align: center; margin-top: 25px;">¿Alguno sabe si existe alguna comunidad o foro de diseño activista?</p>
+              <div class="clearfix"></div>
+              <br/>
+              <div class="divider-line solid light-2"></div>
+              <br/>
+              <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="http://via.placeholder.com/100x100"/></div>
+              <h6 class="less-mar-1 title montserrat">Florencia Bernuy</h6>
+              <span>Diseñadora Gráfica</span>
+              <div><a href="#" class="btn btn-tiny border border-cello uppercase xround-5">Responder</a></div>
+            </div>
+          </div>
+        </div>
+        <!--end item-->
+        <div class="col-md-4">
+          <div class="ce-feature-box-33 h-shadow-2 margin-bottom">
+            <div class="text-box text-center" style="min-height: 515px">
+              <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
+              <div class="clearfix"></div>
+              <br/>
+              <p style="min-height: 90px; text-align: center; margin-top: 25px;">¿Algún libro sobre diseño del color que me recomienden?</p>
+              <div class="clearfix"></div>
+              <br/>
+              <div class="divider-line solid light-2"></div>
+              <br/>
+              <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="http://via.placeholder.com/100x100"/></div>
+              <h6 class="less-mar-1 title montserrat">Rubén Pérez</h6>
+              <span>Diseñador Gráfico</span>
+              <div><a href="#" class="btn btn-tiny border border-cello uppercase xround-5">Responder</a></div>
+            </div>
+          </div>
+        </div>
+        <!--end item-->
+      </div>
+      <!--end carousel item-->
+      <div class="item">
+        <div class="col-md-4">
+          <div class="ce-feature-box-33 h-shadow-2 margin-bottom">
+            <div class="text-box text-center">
+              <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
+              <div class="clearfix"></div>
+              <br/>
+              <p>Elit odio erat vel eget consectetuer adipiscing elit Suspendisse et justo Praesent mattis commodo.</p>
+              <div class="clearfix"></div>
+              <br/>
+              <div class="divider-line solid light-2"></div>
+              <br/>
+              <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="http://via.placeholder.com/100x100"/></div>
+              <h6 class="less-mar-1 title montserrat">Matthew</h6>
+              <span>Manager</span> </div>
+          </div>
+        </div>
+        <!--end item-->
+        <div class="col-md-4">
+          <div class="ce-feature-box-33 h-shadow-2 margin-bottom">
+            <div class="text-box text-center">
+              <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
+              <div class="clearfix"></div>
+              <br/>
+              <p>Elit odio erat vel eget consectetuer adipiscing elit Suspendisse et justo Praesent mattis commodo.</p>
+              <div class="clearfix"></div>
+              <br/>
+              <div class="divider-line solid light-2"></div>
+              <br/>
+              <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="http://via.placeholder.com/100x100"/></div>
+              <h6 class="less-mar-1 title montserrat">Jennifer</h6>
+              <span>Designer</span> </div>
+          </div>
+        </div>
+        <!--end item-->
+        <div class="col-md-4">
+          <div class="ce-feature-box-33 h-shadow-2 margin-bottom">
+            <div class="text-box text-center">
+              <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
+              <div class="clearfix"></div>
+              <br/>
+              <p>Elit odio erat vel eget consectetuer adipiscing elit Suspendisse et justo Praesent mattis commodo.</p>
+              <div class="clearfix"></div>
+              <br/>
+              <div class="divider-line solid light-2"></div>
+              <br/>
+              <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="http://via.placeholder.com/100x100"/></div>
+              <h6 class="less-mar-1 title montserrat">Benjamin</h6>
+              <span>Developer</span> </div>
+          </div>
+        </div>
+        <!--end item-->
+      </div>
+      <!--end carousel item-->
+    </div>
+    <!--end carousel main-->
   </div>
+</div>
 </section>
 
