--- a/join/home/templates/partials/people.html
+++ b/join/home/templates/partials/people.html
@@ -9,7 +9,8 @@
           <div class="col-sm-12">
             <div class="sec-title-container text-center less-padding-4">
               <h2 class=" raleway font-weight-b less-mar-1 uppercase text-white">PERSONAS CON TALENTOS</h2>
-              <h6 class="ce-sub-text big-width raleway text-gray">DESCUBRÍ A DISEÑADORES CON TALENTOS DIFERENTES A LOS TUYOS PARA HACER REALIDAD UNA IDEA O PROYECTO.</h6>
+              <h6 class="ce-sub-text big-width raleway text-gray">DESCUBRÍ A DISEÑADORES CON TALENTOS DIFERENTES A LOS TUYOS </h6>
+              <h6 class="ce-sub-text big-width raleway text-gray">PARA HACER REALIDAD UNA IDEA O PROYECTO.</h6>
             </div>
           </div>
           <div class="clearfix"></div>
