--- a/join/home/templates/partials/projects.html
+++ b/join/home/templates/partials/projects.html
@@ -4,8 +4,9 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="sec-title-container text-center less-padding-4">
-          <h5 class="font-weight-4 less-mar-1 line-height-4 text-primary montserrat">Proyectos fenomenales que inspiran</h5>
-          <h2 class="font-weight-6 less-mar-1 montserrat line-height-5">Propone tu idea y crea un proyecto en conjunto con otros diseñadores.<br/></h2>
+          <h2 class="font-weight-6 less-mar-1 line-height-5 text-primary montserrat">PROYECTOS QUE INSPIRAN</h2>
+          <h4 class="font-weight-3 less-mar-1 montserrat line-height-3">PROPONE TU IDEA Y CREA UN PROYECTO EN CONJUNTO</h3>
+          <h4 class="font-weight-3 less-mar-1 montserrat line-height-3">CON OTROS DISEÑADORES.<br/></h4>
         </div>
       </div>
       <div class="clearfix"></div>
