--- a/join/home/templates/partials/services.html
+++ b/join/home/templates/partials/services.html
@@ -9,20 +9,20 @@
                     <div class="col-md-8 col-centered text-center">
                       <div class="col-sm-12">
                         <div class="sec-title-container less-padding-4 text-center">
-                          <h2 class="font-weight-6 less-mar-1 montserrat line-height-5 text-white">Add Your own<br/>
-                            Youtube video Backgrounds</h2>
+                          <h2 class="font-weight-6 less-mar-1 montserrat line-height-5 text-white">Join, el sitio donde los diseñadores<br/>
+                            encuentran su lugar.</h2>
                         </div>
                       </div>
                       <div class="clearfix"></div>
                       <!--end title-->
-                      <button class="command vbutton pause" id="togglePlay" onclick="jQuery('#video').YTPTogglePlay(changeLabel)">Pause</button>
+                      <button class="command vbutton pause" id="togglePlay" onclick="jQuery('#video').YTPTogglePlay(changeLabel)">PAUSA</button>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <a class="player" data-property="{videoURL:'0LFQhLMxFUI',containment:'#customElement', showControls:false, autoPlay:true, loop:true, vol:50, mute:true, startAt:20,  stopAt:80, opacity:1, addRaster:true, quality:'hd720', optimizeDisplay:true}" id="video">My video</a> </div>
+          <a class="player" data-property="{videoURL:'kQ0wj864aMQ',containment:'#customElement', showControls:false, autoPlay:true, loop:true, vol:50, mute:true, startAt:0,  stopAt:10, opacity:1, addRaster:true, quality:'hd720', optimizeDisplay:true}" id="video">My video</a> </div>
       </section>
 <div class="clearfix"></div>
 <section class="sec-padding section-medium-dark">
@@ -34,12 +34,12 @@
           <div class=" icon-plain-large left icon"><span class="icon-linegraph"></span></div>
           <div class="clearfix"></div>
           <br/>
-          <h4 class="title">Fully Responsive</h4>
-          <p class="small-text">Suspendisse et justo. Praesent mattis commodo augue Aliquam ornare hendrerit augue Cras tellus In pulvinar lectus a est Curabitur eget orci. </p>
+          <h4 class="title">Trabajo Colaborativo</h4>
+          <p class="small-text">Trabajar en equipo con objetivos comunes, asumiendo un compromiso y respetando las opiniones de cada uno de los integrantes.</p>
           <div class="clearfix"></div>
           <br/>
           <br/>
-          <a class="btn btn-white btn-medium btn-round uppercase" href="#"> Read more <i aria-hidden="true" class="fa fa-long-arrow-right"></i></a> </div>
+        </div>
       </div>
       <!--end item-->
       <div class="col-md-3">
@@ -47,12 +47,12 @@
           <div class=" icon-plain-large left icon"><span class="icon-strategy"></span></div>
           <div class="clearfix"></div>
           <br/>
-          <h4 class="title">Iconography</h4>
-          <p class="small-text">Suspendisse et justo. Praesent mattis commodo augue Aliquam ornare hendrerit augue Cras tellus In pulvinar lectus a est Curabitur eget orci. </p>
+          <h4 class="title">Intercambio de Ideas</h4>
+          <p class="small-text">Dos cabezas piensan mejor que una, y unir las ideas de los integrantes para un proyecto es el mejor resultado.</p>
           <div class="clearfix"></div>
           <br/>
           <br/>
-          <a class="btn btn-white btn-medium btn-round uppercase" href="#"> Read more <i aria-hidden="true" class="fa fa-long-arrow-right"></i></a> </div>
+        </div>
       </div>
       <!--end item-->
       <div class="col-md-3">
@@ -60,12 +60,12 @@
           <div class=" icon-plain-large left icon"><span class="icon-target"></span></div>
           <div class="clearfix"></div>
           <br/>
-          <h4 class="title">Success Tool</h4>
-          <p class="small-text">Suspendisse et justo. Praesent mattis commodo augue Aliquam ornare hendrerit augue Cras tellus In pulvinar lectus a est Curabitur eget orci. </p>
+          <h4 class="title">Interdisciplina</h4>
+          <p class="small-text">Combinar las diferentes disciplinas del Diseño con las habilidades, capacidades, los intereses y conocimientos que cada uno tiene, permite una retroalimientación donde todos aprenden y crecen.</p>
           <div class="clearfix"></div>
           <br/>
           <br/>
-          <a class="btn btn-white btn-medium btn-round uppercase" href="#"> Read more <i aria-hidden="true" class="fa fa-long-arrow-right"></i></a> </div>
+        </div>
       </div>
       <!--end item-->
       <div class="col-md-3">
@@ -73,12 +73,12 @@
           <div class=" icon-plain-large left icon"><span class="icon-globe"></span></div>
           <div class="clearfix"></div>
           <br/>
-          <h4 class="title">Lyered PSD</h4>
-          <p class="small-text">Suspendisse et justo. Praesent mattis commodo augue Aliquam ornare hendrerit augue Cras tellus In pulvinar lectus a est Curabitur eget orci. </p>
+          <h4 class="title">Conexiones</h4>
+          <p class="small-text">Nos une una pasión, y es el Diseño, como una forma de vivir, un modo de comunicarnos, de relacionarnos con los demás. Conectados desde el comienzo de la idea, hacemos Diseño para las personas.</p>
           <div class="clearfix"></div>
           <br/>
           <br/>
-          <a class="btn btn-white btn-medium btn-round uppercase" href="#"> Read more <i aria-hidden="true" class="fa fa-long-arrow-right"></i></a> </div>
+        </div>
       </div>
       <!--end item-->
     </div>
