--- a/join/authentication/templates/users/user-profile.html
+++ b/join/authentication/templates/users/user-profile.html
@@ -78,6 +78,36 @@
                           </a>
                         </li>
                       {% endif %}
+                      <li class="hover-message">
+                        <a href="{{ user.get_youtube_profile_url }}" data-target="#modal-switch" data-toggle="modal"><i aria-hidden="true" class="fa fa-envelope"></i> Mensaje</a>
+                        <div aria-labelledby="modal-switch-label" class="modal fade" id="modal-switch" role="dialog" tabindex="-1">
+                          <div class="modal-dialog">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <button class="close" data-dismiss="modal" type="button"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+                                <div class="modal-title" id="modal-switch-label"><h4>Enviar Mensaje</h4></div>
+                              </div>
+                              <div class="modal-body">
+                                <div class="row">
+                                  <div class="col-md-12">
+                                    <textarea class="textaria-1" id="comment" name="message" placeholder="Enter your message"></textarea>
+                                  </div>
+                                </div>
+                                <!-- end row -->
+                                <div class="row">
+                                  <br/>
+                                  <div class="col-md-12 text-center">
+                                    <button class="btn btn-dark btn-medium uppercase" type="submit">
+                                      <i class="fa fa-paper-plane"></i>
+                                      Enviar
+                                    </button>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
                     </ul>
                   </ul>
                 </div>
