min height users box

--- a/join/home/templates/partials/people.html
+++ b/join/home/templates/partials/people.html
@@ -19,7 +19,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
               <div class="ce-feature-box-13">
                 <div class="img-box">
-                  <div class="text-box">
+                  <div class="text-box" style="min-height: 375px;">
                     <div class="sc-icons-box">
                       <ul class="sc-icons">
                         {% if user.twitter_profile %}<li><a class="twitter" target="_blank" href="{{ user.get_twitter_profile_url }}"><i class="fa fa-twitter"></i></a></li>{% endif %}
