--- a/join/home/templates/partials/fans.html
+++ b/join/home/templates/partials/fans.html
@@ -12,18 +12,18 @@
             <div class="ce-feature-box-49">
               <div class="top-box text-center">
                 <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
-                <h3 class="raleway font-weight-3">We develop user interface Applications, animations &amp; icons. </h3>
+                <h3 class="raleway font-weight-3">Diseñador industrial más famoso de América. </h3>
               </div>
               <div class="text-box">
-                <h2 class="font-weight-6 less-mar-1 text-white opacity-5">We offer high Quality Templates and Services </h2>
+                <h2 class="font-weight-6 less-mar-1 text-white opacity-5">Congreso Internacional de Diseño </h2>
                 <br/>
-                <h6 class=" text-white opacity-5">Pharetra semper. Morbi posuere. Donec quis nulla eget orci scelerisque sit amet. </h6>
-                <p>consectetuer adipiscing elit Suspendisse et justo Praesent mattis commodo sit justo amet et augue Aliquam ornare</p>
-                <p>Praesent mattis commodo augue Aliquam ornare hendrerit augue Cras tellus In pulvinar lectus a est Curabitur eget orci Cras laoreet ligula. Etiam sit amet dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae Nullam tellus diam .</p>
+                <p>El presente congreso se llevará a cabo en la sede de <strong>Sheraton Hotel</strong> el día <strong>10 de noviembre</strong> desde las <strong>10 am a 18:00hs.</strong></p>
+                <p>El mismo esta destinado a profesionales del Diseño Gráfico, Indumentaria, Fotografía, Diseño de Interiores, Arquitectura, Marketing, entre otros.</p>
+                <p>Alguno de los ejes a tratar son: Diseño, Empresa y Ciudad, Diseño social y ciudades inclusivas, Diseños y políticas públicas, entre otras temáticas a abordar. La misma tiene un costo de $2.000. Por más información puedes visitar la siguiente página: <a href="https://goo.gl/GWNq6a">https://goo.gl/GWNq6a</a></p>
                 <div class="clearfix"></div>
                 <br/>
                 <br/>
-                <a class="btn btn-dark btn-round uppercase" href="#"><i aria-hidden="true" class="fa fa-play-circle"></i> Read more</a> </div>
+                <a class="btn btn-medium border border-2x border-white uppercase xround-7" href="#">+ MÁS INFO</a> </div>
             </div>
           </div>
           <!--end item-->
@@ -34,18 +34,48 @@
             <div class="ce-feature-box-49">
               <div class="top-box text-center">
                 <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
-                <h3 class="raleway font-weight-3">We offer best price products and included unlimited Plans . </h3>
+                <h3 class="raleway font-weight-3">Workshops en Diseño, Comunicación y Moda. </h3>
               </div>
               <div class="text-box">
-                <h2 class="font-weight-6 less-mar-1 text-white opacity-5">Our Creative Team gives You best Service</h2>
+                <h2 class="font-weight-6 less-mar-1 text-white opacity-5">¿Quieres vivir la experiencia del diseño por un día? </h2>
                 <br/>
-                <h6 class=" text-white opacity-5">Pharetra semper. Morbi posuere. Donec quis nulla eget orci scelerisque sit amet. </h6>
-                <p>consectetuer adipiscing elit Suspendisse et justo Praesent mattis commodo sit justo amet et augue Aliquam ornare</p>
-                <p>Praesent mattis commodo augue Aliquam ornare hendrerit augue Cras tellus In pulvinar lectus a est Curabitur eget orci Cras laoreet ligula. Etiam sit amet dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae Nullam tellus diam .</p>
+                <p>Acércate a vivir una dosis de creatividad y motivación en estado puro con los workshops de IED Master.</p>
+                <p>Los workshops son experiencias formativas en diseño y comunicación que contemplan un contacto directo con profesionales de sectores como la Moda, el Design, la Comunicación o el Management.</p>
+                <p>Gracias a estos talleres creativos de gran intensidad, podrás trabajar de una mano a mano con reconocidos profesionales y obtener una visión más completa, profesional y multidisciplinar de los diferentes ámbitos de trabajo.</p>
+                <p>MOTIVACIÓN, CREATIVIDAD, TÉCNICA</p>
+                <p>Elige cuál es el workshop que más se encaja a ti y escríbenos para informarte de cómo acercarte a vivir esta experiencia IED por un día:
+                  Fernanda Suárez (Servicio de Información y Orientación), m.suarez@madrid.ied.es.</p>
                 <div class="clearfix"></div>
                 <br/>
                 <br/>
-                <a class="btn btn-dark btn-round uppercase" href="#"><i aria-hidden="true" class="fa fa-play-circle"></i> Read more</a> </div>
+                <a class="btn btn-medium border border-2x border-white uppercase xround-7" href="#">+ MÁS INFO</a> </div>
+            </div>
+          </div>
+          <!--end item-->
+        </div>
+        <!--end carousel item-->
+        <div class="item">
+          <div class="col-md-6 col-md-offset-5">
+            <div class="ce-feature-box-49">
+              <div class="top-box text-center">
+                <div class="quote-icon"><i aria-hidden="true" class="fa fa-quote-left"></i></div>
+                <h3 class="raleway font-weight-3">Pop Up Experience. </h3>
+              </div>
+              <div class="text-box">
+                <h2 class="font-weight-6 less-mar-1 text-white opacity-5">Pop Up - Better - Workshops IED Master Madrid </h2>
+                <br/>
+                <p>Desde el concepto a la realización de un espacio pop up. Una nueva manera de posicionar las marcas.</p>
+                <p>Una Pop Up es un espacio comercial temporal, el espacio puede ser una venta de productos un día y hospedar un restaurante al mes siguiente. Las Pop-Up son espacios temporales que mediante marketing experiencial permiten a las marcas tener una presencia en los sitios más emblemáticos y cotizados de las ciudades y ampliar su presencia en el mercado durante un tiempo determinado.</p>
+                <p>Enfocaremos este workshop a analizar las características de estos espacios de manera integral: su concepto, comunicación, marketing, gestión y, por supuesto, el diseño y realización.</p>
+                <p>Se generará un microproyecto tomando todos estos puntos en cuenta para poder generar dentro una breve pero potente Pop Up Experience.</p>
+                <p>Agencia Better - Workshops IED Master Madrid</p>
+                <p>Días 26, 27 y 28 de enero.
+                  26 y 27 – De 19 a 22.30 h.
+                  28 – De 10 a 14 h</p>
+                <div class="clearfix"></div>
+                <br/>
+                <br/>
+                <a class="btn btn-medium border border-2x border-white uppercase xround-7" href="#">+ MÁS INFO</a> </div>
             </div>
           </div>
           <!--end item-->
