--- a/static/css/shortcodes.css
+++ b/static/css/shortcodes.css
@@ -568,6 +568,10 @@ image hover styles
 	color:#101010;
 	border-color:#101010;
 }
+.btn.border.border-white {
+	color:#fff;
+	border-color:#fff;
+}
 .btn.border.border-xdark {
 	color:#000;
 	border-color:#000;
