--- a/join/home/templates/partials/slider.html
+++ b/join/home/templates/partials/slider.html
@@ -41,6 +41,7 @@
                  data-x="['left','left','left','left']" data-hoffset="['50','50','30','17']"
                  data-y="['bottom','bottom','bottom','bottom']" data-voffset="['110','110','180','160']"
                  data-fontsize="['110','100','70','60']"
+                 data-fontfamily="'Raleway', sans-serif"
                  data-lineheight="['100','90','60','60']"
                  data-width="['none','none','none','400']"
                  data-height="none"
@@ -66,9 +67,9 @@
                  id="slide-{{ forloop.counter|add:308 }}-layer-4"
                  data-x="['left','left','left','left']" data-hoffset="['55','55','33','20']"
                  data-y="['bottom','bottom','bottom','bottom']" data-voffset="['40','1','74','58']"
-                 data-fontsize="['15','15','15','13']"
-                 data-lineheight="['24','24','24','20']"
-                 data-width="['410','410','410','280']"
+                 data-fontsize="['35','35','24','24']"
+                 data-lineheight="['35','35','24','24']"
+                 data-width="['960','960','960','480']"
                  data-height="['60','100','100','100']"
                  data-whitespace="normal"
                  data-transform_idle="o:1;"
