--- a/join/static/js/revolution-slider/css/layers.css
+++ b/join/static/js/revolution-slider/css/layers.css
@@ -2538,7 +2538,7 @@ website:   	http://www.themepunch.com
     line-height: 100px;
     font-weight: 800;
     font-style: normal;
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     padding: 10px 0px 10px 0;
     text-decoration: none;
     background-color: transparent;
@@ -2550,12 +2550,12 @@ website:   	http://www.themepunch.com
 }
 .tp-caption.BigBold-SubTitle,
 .BigBold-SubTitle {
-    color: rgba(255, 255, 255, 0.50);
-    font-size: 15px;
+    color: rgba(255, 255, 255, 1.00);
+    font-size: 35px;
     line-height: 24px;
     font-weight: 500;
     font-style: normal;
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     padding: 0 0 0 0px;
     text-decoration: none;
     background-color: transparent;
@@ -2573,7 +2573,7 @@ website:   	http://www.themepunch.com
     line-height: 13px;
     font-weight: 500;
     font-style: normal;
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     padding: 15px 50px 15px 50px;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0);
@@ -2601,7 +2601,7 @@ website:   	http://www.themepunch.com
     line-height: 28px;
     font-weight: 500;
     font-style: normal;
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     padding: 30px 30px 30px 30px;
     text-decoration: none;
     background-color: rgba(255, 255, 255, 1.00);
@@ -2618,7 +2618,7 @@ website:   	http://www.themepunch.com
     line-height: 13px;
     font-weight: 700;
     font-style: normal;
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     padding: 15px 70px 15px 50px;
     text-decoration: none;
     background-color: rgba(255, 255, 255, 1.00);
@@ -2646,7 +2646,7 @@ website:   	http://www.themepunch.com
     line-height: 20px;
     font-weight: 700;
     font-style: normal;
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     padding: 14px 14px 14px 16px;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0);
@@ -2674,7 +2674,7 @@ website:   	http://www.themepunch.com
     line-height: 12px;
     font-weight: 600;
     font-style: normal;
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     padding: 5px 5px 5px 5px;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0.35);
@@ -2692,7 +2692,7 @@ website:   	http://www.themepunch.com
     line-height: 30px;
     font-weight: 900;
     font-style: normal;
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     padding: 5px 5px 5px 5px;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 1.00);
