slider and services

--- a/join/home/templates/partials/services.html
+++ b/join/home/templates/partials/services.html
@@ -31,7 +31,7 @@
       <!--end title-->
       <div class="col-md-3">
         <div class="ce-feature-box-54">
-          <div class=" icon-plain-large left icon"><span class="icon-linegraph"></span></div>
+          <div class=" icon-plain-large left icon"><span class="icon-team-work"></span></div>
           <div class="clearfix"></div>
           <br/>
           <h4 class="title">Trabajo Colaborativo</h4>
@@ -44,7 +44,7 @@
       <!--end item-->
       <div class="col-md-3">
         <div class="ce-feature-box-54">
-          <div class=" icon-plain-large left icon"><span class="icon-strategy"></span></div>
+          <div class=" icon-plain-large left icon"><span class="icon-idea-exchange"></span></div>
           <div class="clearfix"></div>
           <br/>
           <h4 class="title">Intercambio de Ideas</h4>
@@ -57,7 +57,7 @@
       <!--end item-->
       <div class="col-md-3">
         <div class="ce-feature-box-54">
-          <div class=" icon-plain-large left icon"><span class="icon-target"></span></div>
+          <div class=" icon-plain-large left icon"><span class="icon-interdisciplinary"></span></div>
           <div class="clearfix"></div>
           <br/>
           <h4 class="title">Interdisciplina</h4>
@@ -70,7 +70,7 @@
       <!--end item-->
       <div class="col-md-3">
         <div class="ce-feature-box-54">
-          <div class=" icon-plain-large left icon"><span class="icon-globe"></span></div>
+          <div class=" icon-plain-large left icon"><span class="icon-connections"></span></div>
           <div class="clearfix"></div>
           <br/>
           <h4 class="title">Conexiones</h4>
