--- a/join/templates/head.html
+++ b/join/templates/head.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="{% static "css/theme-default.css" %}" type="text/css">
     <link rel="stylesheet" href="{% static "js/loaders/stylesheets/screen.css" %}">
     <link rel="stylesheet" href="{% static "css/corporate.css" %}" type="text/css">
+    <link rel="stylesheet" href="{% static "fonts/fontjoin/css/joinsite.css" %}">
     <link rel="stylesheet" href="{% static "fonts/font-awesome/css/font-awesome.min.css" %}" type="text/css">
     <link rel="stylesheet" type="text/css" href="{% static "fonts/Simple-Line-Icons-Webfont/simple-line-icons.css" %}" media="screen" />
     <link rel="stylesheet" href="{% static "fonts/et-line-font/et-line-font.css" %}">
